# yacana

./: .gitignore  LICENSE  README.md  setup.cfg
doc/: config.yml
docs/: README.md  index.html
docs/assets/css/: codemirror-custom.css  main.css
docs/assets/js/: codemirror-custom.js  main.js
docs/assets/sass/layout/: _menu.scss
docs/assets/sass/libs/: _functions.scss:Zone.Identifier
docs/images/: autogen.png:Zone.Identifier  ollama.png:Zone.Identifier  yacana_full.png:Zone.Identifier  yacana_small.png:Zone.Identifier
docs/pages/: Installation.html  agents_and_tasks.html  clases.html  classes.html  dual_agents_chat.html  installation.html  managing_agent_history.html  multi_agents_chat.html  roadmap.html  routing.html  tool_calling.html
docs/pages/chunks/: main_menu.html
examples/invoices_checker/: quick_demo.py
src/yacana/: __init__.py  agent.py  exceptions.py  group_solve.py  history.py  logging_config.py  modelSettings.py  task.py  tool.py
