[metadata]
name = yacana
version = 0.1.3
author = Emilien Lancelot
author_email = remember.softwares@gmail.com
description = Task-driven multi-agent framework giving you the building blocks to create anything you wish with LLMs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://remembersoftwares.github.io/yacana/
project_urls =
    Github = https://github.com/rememberSoftwares/yacana
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    ollama >= 0.2.1
    pydantic >= 2.7.3
    pydantic_core >= 2.18.4

[options.packages.find]
where = src
